--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
             android:id="@+id/btn_seven"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            app:backgroundTint="@null"
             android:layout_weight="1"
             android:background="@color/button_color"
             android:onClick="onDigit"
@@ -38,6 +39,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            app:backgroundTint="@null"
             android:background="@color/button_color"
             android:onClick="onDigit"
             android:text="8" />
@@ -46,12 +48,14 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            app:backgroundTint="@null"
             android:background="@color/button_color"
             android:text="9"
             android:onClick="onDigit"/>
         <Button
             android:id="@+id/btn_divide"
             android:layout_width="0dp"
+            app:backgroundTint="@null"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/button_color"
@@ -75,6 +79,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            app:backgroundTint="@null"
             android:background="@color/button_color"
             android:onClick="onDigit"
             android:text="4" />
@@ -84,6 +89,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            app:backgroundTint="@null"
             android:background="@color/button_color"
             android:onClick="onDigit"
             android:text="5" />
@@ -92,6 +98,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            app:backgroundTint="@null"
             android:background="@color/button_color"
             android:text="6"
             android:onClick="onDigit"/>
@@ -101,6 +108,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/button_color"
+            app:backgroundTint="@null"
             android:text="*"
             android:onClick="onDigit"/>
 
@@ -121,6 +129,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            app:backgroundTint="@null"
             android:background="@color/button_color"
             android:onClick="onDigit"
             android:text="1" />
@@ -130,6 +139,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            app:backgroundTint="@null"
             android:background="@color/button_color"
             android:onClick="onDigit"
             android:text="2" />
@@ -138,6 +148,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            app:backgroundTint="@null"
             android:background="@color/button_color"
             android:text="3"
             android:onClick="onDigit"/>
@@ -146,6 +157,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            app:backgroundTint="@null"
             android:background="@color/button_color"
             android:text="-"
             android:onClick="onDigit"/>
@@ -169,6 +181,7 @@
             android:layout_weight="1"
             android:background="@color/button_color"
             android:onClick="onDigit"
+            app:backgroundTint="@null"
             android:text="." />
 
         <Button
@@ -176,6 +189,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            app:backgroundTint="@null"
             android:background="@color/button_color"
             android:onClick="onDigit"
             android:text="0" />
@@ -186,6 +200,7 @@
             android:layout_weight="1"
             android:background="@color/button_color"
             android:text="CLR"
+            app:backgroundTint="@null"
             android:onClick="onDigit"/>
         <Button
             android:id="@+id/btn_add"
@@ -194,12 +209,26 @@
             android:layout_weight="1"
             android:background="@color/button_color"
             android:text="+"
+            app:backgroundTint="@null"
             android:onClick="onDigit"/>
-
-
 
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="2dp"
+        android:layout_weight="1">
+        <Button
+            android:id="@+id/equal_button"
+            android:text="="
+            app:backgroundTint="@null"
+            android:background="@color/teal_700"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+</LinearLayout>
 
 </LinearLayout>
