--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -201,7 +201,7 @@
             android:background="@color/button_color"
             android:text="CLR"
             app:backgroundTint="@null"
-            android:onClick="onDigit"/>
+            android:onClick="onCLear"/>
         <Button
             android:id="@+id/btn_add"
             android:layout_width="0dp"
