--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
             android:layout_weight="1"
             android:background="@color/button_color"
             android:text="/"
-            android:onClick="onDigit"/>
+            android:onClick="onOperator"/>
 
 
 
@@ -110,7 +110,7 @@
             android:background="@color/button_color"
             app:backgroundTint="@null"
             android:text="*"
-            android:onClick="onDigit"/>
+            android:onClick="onOperator"/>
 
 
 
@@ -153,14 +153,14 @@
             android:text="3"
             android:onClick="onDigit"/>
         <Button
-            android:id="@+id/btn_substraction"
+            android:id="@+id/btn_subtraction"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             app:backgroundTint="@null"
             android:background="@color/button_color"
             android:text="-"
-            android:onClick="onDigit"/>
+            android:onClick="onOperator"/>
 
 
 
@@ -180,7 +180,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/button_color"
-            android:onClick="onDigit"
+            android:onClick="onDecimalPoint"
             app:backgroundTint="@null"
             android:text="." />
 
@@ -210,7 +210,7 @@
             android:background="@color/button_color"
             android:text="+"
             app:backgroundTint="@null"
-            android:onClick="onDigit"/>
+            android:onClick="onOperator"/>
 
 
     </LinearLayout>
