--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -227,7 +227,8 @@
             app:backgroundTint="@null"
             android:background="@color/teal_700"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:onClick="onEqual"/>
 
 </LinearLayout>
 
