minus bug fixed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,10 @@
         android:maxLength="12"
         android:background="#efefef"
         android:layout_width="match_parent"
-        android:layout_height="250dp"/>
+        android:layout_height="250dp"
+        android:padding="10dp"
+        android:text="0"
+        android:gravity="right|center_vertical|bottom"/>
 
     <!--Row 1-->
     <LinearLayout
